--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
 <img id="bg" src="https://png.pngtree.com/background/20230216/original/pngtree-islamic-background-picture-image_2027687.jpg" alt="This is bacground">
 <img id="bg-phone" src="https://i.pinimg.com/236x/09/4b/7f/094b7fbfc266ca0638a19d4166e42b96.jpg" alt="image For phone">
+<img class="flag" src="https://t4.ftcdn.net/jpg/04/65/07/35/360_F_465073582_F46oYYt8AijOzb2WWdc6delqOc6j8f8k.jpg" alt="">
+<img class="flag flag1" src="img/Shahada By Bx Artofit.jpg" alt="">
+<div id="clock"></div>
 <div id="div-one">
     <span>
+        <span id="time-one">اذان صبح</span>
             <img id="icon1" src="img/arch-monument.png" alt="">
     <span id="time1">
     </span>
@@ -20,6 +24,7 @@
 
 
      <span>
+        <span id="time-two">وقت ظهر</span>
             <img id="icon1" src="img/arch-monument.png" alt="">
     <span id="time2">
     </span>
@@ -27,16 +32,20 @@
     </span>
 
      <span>
+        <span id="time-tree">وقت عصر</span>
             <img id="icon1" src="img/arch-monument.png" alt="">
     <span id="time3">
     </span>
     </span>
 
      <span>
+        <span id="time-fure">وقت مغرب</span>
             <img id="icon1" src="img/arch-monument.png" alt="">
     <span id="time5">
     </span>
     </span> <span>
+                <span id="time-five">وقت عشاء</span>
+
             <img id="icon1" src="img/arch-monument.png" alt="">
     <span id="time4">
     </span>
