--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
 
     
 </div>
+<div id="af">
+        <h1>د افغانستان اسلامي امارت</h1>
+        <h2>د هرات ولایت</h2>
+        <h3>انجیل ولسوالۍ</h3>
+</div>
+<img id="icon-one" src="img/decoration.png" alt="">
+<img id="icon-two" src="img/decoration.png" alt="">
+
 
     <script src="app.js"></script>
 </body>
