--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>وقت نماز</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://www.flaticon.com/authors/google">
 </head>
