--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
 <img id="icon-two" src="img/decoration.png" alt="">
 
 
+<div class="small">
+                <span id="div1">اذان صبح</span>
+                <span id="div2">وقت ظهر</span>
+                <span id="div3">وقت عصر</span>
+                <span id="div4">وقت مغرب</span>
+                <span id="div5">وقت عشاء</span>
+
+
+</div>
+
     <script src="app.js"></script>
 </body>
 </html>
